another attempt at fixing mobile stretching

--- a/styles/AlbumSingle.module.css
+++ b/styles/AlbumSingle.module.css
@@ -57,7 +57,6 @@
   align-items: center;
 }
 .image_single {
-  width: auto;
   max-height: 100%;
 
   border: 7px solid rgb(255, 255, 255);
